--- a/templates/server-deployment.yaml
+++ b/templates/server-deployment.yaml
@@ -37,6 +37,8 @@ spec:
           volumeMounts:
             - name: config
               mountPath: /config
+            - name: ui-extras
+              mountPath: /app/client/dist/extras
           env:
           {{- include "redash.env" . | nindent 12 }}
           {{- range $key, $value := .Values.server.env }}
@@ -72,6 +74,9 @@ spec:
         - name: config
           configMap:
             name: {{ include "redash.fullname" . }}
+        - name: ui-extras
+          configMap:
+            name: {{ include "redash.fullname" . }}-ui-extras
     {{- with .Values.server.nodeSelector }}
       nodeSelector:
 {{ toYaml . | indent 8 }}
